--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "w02-demo",
+  "homepage": "https://a29692130.github.io/w02-r/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
